--- a/index.html
+++ b/index.html
@@ -1,130 +1,160 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      body {
-        margin: 0;
-        padding-bottom: 3rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif;
-      }
 
-      #form {
-        background: rgba(0, 0, 0, 0.15);
-        padding: 0.25rem;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        height: 3rem;
-        box-sizing: border-box;
-        backdrop-filter: blur(10px);
-      }
+<head>
+  <title>Yanny-Workaround</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Helvetica, Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 60px 0;
+    }
 
-      #input {
-        border: none;
-        padding: 0 1rem;
-        flex-grow: 1;
-        border-radius: 2rem;
-        margin: 0.25rem;
-      }
+    #form {
+      background: rgba(0, 0, 0, 0.15);
+      padding: 0.25rem;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: flex;
+      height: 3rem;
+      box-sizing: border-box;
+      backdrop-filter: blur(10px);
+    }
 
-      #input:focus {
-        outline: none;
-      }
+    #input {
+      border: none;
+      padding: 0 1rem;
+      flex-grow: 1;
+      border-radius: 2rem;
+      margin: 0.25rem;
+    }
 
-      #form > button {
-        background: #333;
-        border: none;
-        padding: 0 1rem;
-        margin: 0.25rem;
-        border-radius: 3px;
-        outline: none;
-        color: #fff;
-      }
+    #input:focus {
+      outline: none;
+    }
 
-      #messages {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
+    #form>button {
+      background: #333;
+      border: none;
+      padding: 0 1rem;
+      margin: 0.25rem;
+      border-radius: 3px;
+      outline: none;
+      color: #fff;
+    }
 
-      #messages > li {
-        padding: 0.5rem 1rem;
-      }
+    #messages {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
 
-      #messages > li:nth-child(odd) {
-        background: #efefef;
-      }
-    </style>
-  </head>
+    #messages>li {
+      padding: 0.5rem 1rem;
+    }
 
-  <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
+    #messages>li:nth-child(odd) {
+      background: #efefef;
+    }
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
+    .btn {
+      margin: 20px 0;
+      padding: 25px 75px;
+      border: none;
+      font-size: 2rem;
+      border-radius: 4px;
+      transition: 0.3s all ease;
+    }
 
-      var form = document.getElementById("form");
-      var input = document.getElementById("input");
-      var messages = document.getElementById("messages");
-      function debounce(func, wait, immediate) {
-        var timeout;
-        return function () {
-          var context = this,
-            args = arguments;
-          clearTimeout(timeout);
-          timeout = setTimeout(function () {
-            timeout = null;
-            if (!immediate) func.apply(context, args);
-          }, wait);
-          if (immediate && !timeout) func.apply(context, args);
-        };
-      }
-      input.addEventListener("keydown", (e) => {
-        socket.emit("typing");
-        debounce(() => {
-          console.log("typed sent");
-          socket.emit("typed");
-        }, 250);
-      });
+    .btn:is(:hover, :focus, :active) {
+      outline: none;
+    }
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        if (input.value) {
-          var item = document.createElement("li");
-          item.textContent = input.value;
-          messages.appendChild(item);
-          window.scrollTo(0, document.body.scrollHeight);
-          socket.emit("chat message", input.value);
-          input.value = "";
-        }
-      });
-      socket.on("disconnect-user", (msg) => {
-        var item = document.createElement("li");
-        item.textContent = msg + " has left";
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-      });
-      socket.on("chat message", (msg) => {
-        var item = document.createElement("li");
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-      });
+    .btn#smiled-btn {
+      background: #17a2b8;
+      color: #fff;
+    }
 
-      socket.on("typing", (id) => {
-        console.log(id, "is typing");
-      });
-      socket.on("typed", (id) => {
-        console.log(id, "typed");
-      });
-    </script>
-  </body>
+    .btn#smiled-btn:is(:hover, :active) {
+      background: #138496;
+      ;
+    }
+
+    .btn#nextround-btn:is(:hover, :active) {
+      background: #218838;
+      ;
+    }
+
+    .btn#nextround-btn {
+      background: #28a745;
+      color: #fff;
+    }
+
+    #round-info {
+      color: #17a2b8;
+      font-size: 3rem;
+      margin: 15px 0;
+    }
+
+    #smiled-info {
+      margin-bottom: 30px;
+      font-size: 1.5rem;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="round-info"></div>
+  <div id="smiled-info"></div>
+  <button id="smiled-btn" class="btn">I SMILED</button>
+  <button id="nextround-btn" class="btn">NEXT ROUND</button>
+  <ul id="messages"></ul>
+  <form id="form" action="">
+    <input id="input" autocomplete="off" /><button>Send</button>
+  </form>
+
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+
+    var form = document.getElementById("form");
+    var input = document.getElementById("input");
+    var messages = document.getElementById("messages");
+    var roundInfo = document.getElementById("round-info");
+    var smiledInfo = document.getElementById("smiled-info");
+    var smiledBtn = document.getElementById("smiled-btn");
+    var nextroundBtn = document.getElementById("nextround-btn");
+
+
+    nextroundBtn.addEventListener("click", () => {
+      socket.emit("next-round");
+    })
+    socket.on("next-round", (nextroundCount) => {
+      roundInfo.innerText = `ROUND ${nextroundCount}`;
+    })
+    smiledBtn.addEventListener("click", (e) => {
+      e.preventDefault();
+      socket.emit("smiled");
+    })
+    socket.on("next-round", (nextroundCount) => {
+      roundInfo.innerText = `ROUND ${nextroundCount}`;
+    })
+    socket.on("smiled", (id) => {
+      smiledInfo.innerText = `${id} has smiled!`;
+      setTimeout(() => {
+        smiledInfo.innerText = '';
+      }, 2000)
+    })
+
+   
+  </script>
+</body>
+
 </html>
